<resources>
    <string name="app_name">BTRFID</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">bluetooth reader configs </string>
    <string name="action_system">system config</string>
    <string name="bleop_View_bluesetmac">bluetooth set：</string>
    <string name="bleop_textView_cnstate">connected state：</string>
    <string name="bleop_textView_framet">Service UUID：</string>
    <string name="bleop_radio_readuuid">read UUID：</string>
    <string name="bleop_radio_writeuuid">write UUID：</string>
    <string name="bleop_radio_passuuid">Password UUID：</string>
    <string name="bleop_button_clearuuid">Clear UUID</string>
    <string name="bleop_button_refreshservie">refresh service </string>
    <string name="bleop_button_into">Ensure</string>
    <string name="storage_access_required">This app requires your memory access to read excel-sheet files</string>
    <string name="storage_access_denied">Please goto app settings and grant memory permission. </string>
    <string name="storage_unavailable">Your device does not support storage</string>
    <string name="str_paramset">set</string>
    <string name="str_paramget">get</string>
    <string name="str_bank">bank</string>
    <string name="str_frency">frequency</string>
    <string name="str_startadr2">start adress</string>
    <string name="str_startadr4">start adress</string>
    <string name="str_len">length </string>
    <string name="str_filter">filter</string>
    <string name="str_filterbank">filter bank</string>
    <string name="str_filterdata">filter data</string>
    <string name="str_pwd">password </string>
    <string name="str_acpwd">access password </string>
    <string name="str_match">match</string>
    <string name="str_nomatch">not match</string>
    <string name="str_filterdisable">disable filter</string>
    <string name="str_filterenable">enable filter</string>
    <string name="str_disable">disable</string>
    <string name="str_enable">enable</string>
    <string name="str_ant">ant</string>
    <string name="str_one">unique</string>
    <string name="systemlayout_TextView_commpar">communication params</string>
    <string name="systemlayout_textView_comm_oncec">frame bytes</string>
    <string name="systemlayout_textView_frametime">frame time</string>
    <string name="systemlayout_button_setblueframe">frame setting</string>
    <string name="systemlayout_textView_see">browse</string>
    <string name="systemlayout_textView_export">export</string>
    <string name="systemlayout_textView_exportxt">export(.txt,.csv)</string>
    <string name="path_location_button_select">select</string>
    <string name="tab_blueset_blue_TextView_blname">bluetooth name</string>
    <string name="tab_blueset_fre_TextView_blfrescrow">frequency(context slide)</string>
    <string name="tab_blueset_fre_button_blgetfre">see frequencys</string>
    <string name="tab_blueset_fre_button_blsetfre">set frequencys</string>
    <string name="tab_blueset_gen2_TextView_blqv">Q value</string>
    <string name="tab_blueset_mode_TextView_blmodetr">mode alter</string>
    <string name="tab_blueset_mode_button_bltoinit">active mode</string>
    <string name="tab_blueset_mode_button_bltopass">passive mode
</string>
    <string name="tab_blueset_mode_TextView_blworkmode">work mode</string>
    <string name="tab_blueset_mode_radio_blmultag">multi-tags inventory</string>
    <string name="tab_blueset_mode_radio_blreadtagmem">read tag memery bank</string>
    <string name="tab_blueset_mode_radio_blsintag">single tag inventory</string>
    <string name="tab_blueset_mode_TextView_blreturnopt">return tag data option </string>
    <string name="tab_blueset_mode_checkBox_bluereadcount">count</string>
    <string name="tab_blueset_mode_checkBox_bluefrequency">frequency</string>
    <string name="tab_blueset_mode_checkBox_bluetime">time</string>
    <string name="tab_blueset_mode_checkBox_bluepro">protocol</string>
    <string name="tab_blueset_mode_textView_blreadmem">read tag memery bank</string>
    <string name="tab_blueset_mode_radio_blreser">rerserver</string>
    <string name="tab_blueset_mode_TextView_blfrescrow">frequency(context slide)</string>
    <string name="tab_blueset_read_TextView_blreadopt">inventory time </string>
    <string name="tab_blueset_read_textView_blreadoptmils">inventory time(millisecond)</string>
    <string name="tab_blueset_read_textView_blreadoptfrainver">frame data interval</string>
    <string name="tab_blueset_read_TextView_blreadoppowset">power setting</string>
    <string name="tab_blueset_read_checkBox_bluehrssi">record max RSSI</string>
    <string name="tab_indicator_vertical_tv_indicator">ant params</string>
    <string name="tab1_connect_TextView_searchblue">search bluetooth reader </string>
    <string name="tab1_connect_button_search">search</string>
    <string name="tab1_connect_button_reset">reset </string>
    <string name="tab1_connect_checkBox_bth2">usually search</string>
    <string name="tab1_connect_checkBox_bthble">BLE search</string>
    <string name="tab1_connect_textView_sort">sort</string>
    <string name="tab1_connect_textView_bluetooth">bluetooth set</string>
    <string name="tab1_connect_textView_type">type</string>
    <string name="tab1_connect_textView_rssi">rssi</string>
    <string name="tab1_connect_TextView_tb1opt">option</string>
    <string name="tab1_connect_textView_blue_addr">adress  </string>
    <string name="tab1_connect_textView_tb1tp">type</string>
    <string name="tab1_connect_textView_tb1btp">bluetooth module</string>
    <string name="tab1_connect_textView_tb1antp">ant port</string>
    <string name="tab1_connect_TextView_tb1conn">connect to reader</string>
    <string name="tab1_connect_button_connect">connect</string>
    <string name="tab1_connect_button_disconnect">disconnect</string>
    <string name="tab1_debug_textView_dbif">bluetooth set info</string>
    <string name="tab1_debug_View_dbblue">bluetooth set ：</string>
    <string name="tab1_debug_textView_dbst">state：</string>
    <string name="tab1_debug_textView_debug">debug</string>
    <string name="tab1_debug_textView_dbsend">   send：</string>
    <string name="tab1_debug_textView_dbrevd">             receive：</string>
    <string name="tab1_debug_button_send1">send1</string>
    <string name="tab1_debug_button_send2">send2</string>
    <string name="tab1_debug_button_send3">send3</string>
    <string name="tab1_debug_hex">hex </string>
    <string name="tab1_debug_button_revd">receive</string>
    <string name="tab1_debug_button_clear">clear</string>
    <string name="tab2_button_start">START</string>
    <string name="tab2_button_stop">STOP</string>
    <string name="tab2_button_readclear">CLEAR</string>
    <string name="tab2_textView_oncecnt">once read tags count:</string>
    <string name="tab2_textView_tocnt">" all read tags count:"</string>
    <string name="tab2_textView_set_status">set state：</string>
    <string name="tab3_lock_textView_lockopt">lock option</string>
    <string name="tab3_lock_textView_lockbk">lock bank</string>
    <string name="tab3_lock_textView_locktp">lock type</string>
    <string name="tab3_lock_button_lock">lock</string>
    <string name="tab3_lock_button_kill">kill</string>
    <string name="tab3_read_textView_rbk">select bank</string>
    <string name="tab3_read_textView_rbank">bank</string>
    <string name="tab3_read_textView_opstadr">start address</string>
    <string name="tab3_read_textView_opblock">block count</string>
    <string name="tab3_read_button_read">read </string>
    <string name="tab3_read_button_write">write</string>
    <string name="tab3_read_button_wepc">write epc</string>
    <string name="tab3_textView_tb3opant">operation ant</string>
    <string name="tab4_atpw_TextView_antpck">ant check</string>
    <string name="tab4_atpw_radio_tb4nck">no check</string>
    <string name="tab4_atpw_radio_tb4ck"> check</string>
    <string name="tab4_atpw_textView_tab4pw">power</string>
    <string name="tab4_atpw_textView_ant1_pwr">ant 1 read power</string>
    <string name="tab4_atpw_textView_tab4wp">write power</string>
    <string name="tab4_atpw_TextView_tb4a2rp">ant 2 read power </string>
    <string name="tab4_atpw_textView_tb4a3rp">ant 3 read power</string>
    <string name="tab4_atpw_textView_tba4rp">ant 4 read power </string>
    <string name="tab4_gen2_TextView_g2q">Q value</string>
    <string name="tab4_gen2_textView_tb4g2wm">write mode</string>
    <string name="tab4_gen2_textView_tb4g2ml">max length </string>
    <string name="tab4_gen2_TextView_tb4g2cd">gen2 code </string>
    <string name="tab4_emd_TextView_tb4_emdda">addition data</string>
    <string name="tab4_emd_textView_tb4_bcnt">bytes count </string>
    <string name="tab4_fre_TextView_tb4fre">frequency</string>
    <string name="tab4_fre_checkBox_allselect">all select </string>
    <string name="tab4_fre_button_getfre">see frequencys </string>
    <string name="tab4_fre_button_setfre">set frequencys </string>
    <string name="tab4_usl_TextView_tb4motra">mode alter</string>
    <string name="tab4_usl_button_toinit_pass">active mode</string>
    <string name="tab4_usl_button_topass_pass">passive mode
</string>
    <string name="tab4_usl_textView_tb4invpro">inventory protocol</string>
    <string name="tab4_usl_TextView_tb4oppro">opration protocol </string>
    <string name="tab4_usl_checkBox_ant1">ant1  </string>
    <string name="tab4_usl_checkBox_ant2">ant2  </string>
    <string name="tab4_usl_checkBox_ant3">ant3  </string>
    <string name="tab4_usl_checkBox_ant4">ant4  </string>
    <string name="tab4_usl_TextView_tb4rtm">read time set </string>
    <string name="tab4_usl_textView_tb4invtm">read timeout </string>
    <string name="tab4_usl_textView_read_inve">interval</string>
    <string name="tab4_ot_textView_tb4otaoe">ant unique</string>
    <string name="tab4_ot_TextView_tb4otdaoe">addition data unique</string>
    <string name="tab4_ot_TextView_tb4otrhr">record max RSSI</string>
    <string name="tab4_ot_TextView_tb4otinvmo">inventory mode </string>
    <string name="tab4_ot_TextView_tb46btd">Iso180006b depth </string>
    <string name="sub_cus_TextView_cusbkpwd">area password</string>
    <string name="sub_cus_textView_cuscurpwd">current password </string>
    <string name="sub_cus_button_changearealock">area lock with password </string>
    <string name="sub_cus_button_changearealocknopwd">area lock without password  </string>
    <string name="sub_cus_textView_subcusnpwd">new password </string>
    <string name="sub_cus_button_changegareapwd">change area password </string>
    <string name="sub_cus_textView_subcuskrprcd">坤锐private command </string>
    <string name="sub_cus_textView_subcusoptt">opration timeout(millisecond) </string>
    <string name="sub_cus_textView_subcusbkbr">area(4 areas of a User bank，32 blocks of a area) </string>
    <string name="sub_cus_textView_subcusfdby">filter data(binary) </string>
    <string name="menu_1">private command </string>
    <string name="menu_2">system config</string>
    <string name="menu_3">bluetooth debug </string>
    <string name="Constr_READ">read </string>
    <string name="Constr_CONNECT">connect </string>
    <string name="Constr_INVENTORY">inventory </string>
    <string name="Constr_RWLOP">readwrtielock </string>
    <string name="Constr_set">setting </string>
    <string name="Constr_PASSVICE">passive set </string>
    <string name="Constr_ACTIVE">active set </string>
    <string name="Constr_SetFaill">set fail： </string>
    <string name="Constr_GetFaill">get fail： </string>
    <string name="Constr_SetOk">set success </string>
    <string name="Constr_unsupport">unsupported </string>
    <string name="Constr_Putandexit">put again then exit </string>
    <string name="Constr_stopscan">please stop scan first </string>
    <string name="Constr_scanasetconnecto">please scan and select a bluetooth set ,then connect to it </string>
</resources>