<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp" >

        <View
            android:id="@+id/View06"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/TextView_blfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_filter"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_blfildata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filterdata" />

            <EditText
                android:id="@+id/editText_bluefilterdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_stadr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_startadr4" />

            <EditText
                android:id="@+id/editText_blueinvfilsadr"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="32" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_blfilbank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_filterbank" />

            <Spinner
                android:id="@+id/spinner_blueinvfbank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup_blueinvmatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_blmatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/str_match" />

            <RadioButton
                android:id="@+id/radio_blnomatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nomatch" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioGroup_blue_fil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_bldisenable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/str_filterdisable" />

                <RadioButton
                    android:id="@+id/radio_blenable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_filterenable" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_blgetfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_paramget" />

        <Button
            android:id="@+id/button_blsetfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_paramset" />
    </LinearLayout>

</LinearLayout>