<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@color/white"
    android:scrollbars="vertical" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/View03"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:background="#f3e6ff" />
        <ImageView
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
        <TextView
            android:id="@+id/TextView_searchblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_connect_TextView_searchblue"
            android:textColor="#ff1493"
            android:visibility="gone"
            android:textSize="18sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1b607c"
            android:text="search" />

        <CheckBox
            android:id="@+id/checkBox_bth2"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tab1_connect_checkBox_bth2"
            android:textSize="11sp"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox_bthble"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tab1_connect_checkBox_bthble"
            android:textSize="13sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tab1_connect_button_reset"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBox_rematch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="rebond"
            android:textSize="13sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tab1_connect_textView_sort"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.63"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tab1_connect_textView_bluetooth" />

        <TextView
            android:id="@+id/textView_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tab1_connect_textView_type" />

        <TextView
            android:id="@+id/textView_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tab1_connect_textView_rssi" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_params"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1" >
    </ListView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:visibility="gone"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/TextView_tb1opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab1_connect_TextView_tb1opt"
            android:visibility="gone"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_blue_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tab1_connect_textView_blue_addr" />

        <TextView
            android:id="@+id/TextView_adr"
            android:layout_width="283dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </TextView>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_tb1tp"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/tab1_connect_textView_tb1tp" />

            <Spinner
                android:id="@+id/spinner_module"
                android:layout_width="85dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_tb1btp"
                android:layout_width="28dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:text="@string/tab1_connect_textView_tb1btp" />

            <Spinner
                android:id="@+id/spinner_bluetype"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_tb1antp"
                android:layout_width="29dp"
                android:visibility="gone"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab1_connect_textView_tb1antp" />

            <Spinner
                android:id="@+id/spinner_antports"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <View
            android:id="@+id/View01"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:visibility="gone"
            android:background="#BFEFFF" />

        <TextView
            android:id="@+id/TextView_tb1conn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/tab1_connect_TextView_tb1conn"
            android:textColor="#ff1493"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinner_connectway"
            android:layout_width="90dp"
            android:visibility="gone"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#1b607c"
            android:text="@string/tab1_connect_button_connect" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/tab1_connect_button_disconnect" />
    </LinearLayout>

</LinearLayout>