<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.module_android_bluedemo.MainActivity" >

    <item android:id="@+id/action_custom" android:title="@string/menu_1" android:visible="false"></item>
    <item android:id="@+id/action_system" android:title="@string/menu_2" android:visible="false"></item>
    <item android:id="@+id/action_debug" android:title="@string/menu_3" android:visible="false"></item>
    <item android:id="@+id/action_version" android:title="d1.15.4.0" android:visible="false"></item>
    <item
        android:id="@+id/btn_search"
        android:orderInCategory="100"
        android:title="connect"
        app:showAsAction="never" />

    <item
        android:id="@+id/button_disconnect"
        android:orderInCategory="100"
        android:title="disconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_xlxs"
        android:orderInCategory="100"
        android:visible="false"
        android:title="import_xlxs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import_xls"
        android:orderInCategory="100"
        android:title="import_xls"
        app:showAsAction="never"/>


</menu>
